User Guide commit

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,12 +8,12 @@ date-format: long
 from: markdown+emoji
 
 book:
-  title: "User Guide: Annual Review Article Topic"
-  author: "Author Name"
+  title: "User Guide: Bias in Actuarial Models"
+  author: "Josephine Browning"
   page-footer:
-    left: "Copyright 2025, Author Name"
+    left: "Copyright 2025, Josephine Browning"
   chapters:
-    - index.qmd # Remove this before you submit your final report!
+    - index.qmd
     - guide.qmd
     - references.qmd
   appendices:
